--- a/css/about.scss
+++ b/css/about.scss
@@ -19,6 +19,7 @@ body{
     color: $color-main-hover;
     font-family: $font-family-main;
     font-weight: 200;
+    font-size:42px;
   }
 
   .container{
