--- a/css/project.css
+++ b/css/project.css
@@ -24,13 +24,16 @@ label {
 p, li {
   color: #3F3F3F !important; }
 
+p:hover, li:hover {
+  opacity: 1; }
+
 a {
   font-family: "Lato", sans-serif;
   text-decoration: none !important;
-  color: #B8807F; }
+  color: #2A5DB0; }
 
 a:hover {
-  color: #985C5A; }
+  color: #2200CC; }
 
 .navbar-default {
   text-align: center;
@@ -59,6 +62,8 @@ a:hover {
     color: #F3F3F3 !important;
     position: relative;
     bottom: 14px; }
+  .navbar-default .container-fluid #bs-example-navbar-collapse-1 .navbar-nav li a:hover, .navbar-default .container-fluid #bs-example-navbar-collapse-1 .navbar-nav li a:focus {
+    color: white !important; }
 
 .dropdown-menu {
   z-index: 10;
@@ -77,7 +82,7 @@ a:hover {
   .dropdown-menu li:hover {
     background: transparent; }
     .dropdown-menu li:hover a {
-      color: #B8807F;
+      color: #2A5DB0;
       background: transparent; }
 
 .navbar-default .navbar-nav > .open > a,
@@ -517,7 +522,7 @@ span {
           .content-wrapper .author-section .user-action-buttons .action-buttons li a {
             display: inline-block; }
           .content-wrapper .author-section .user-action-buttons .action-buttons li .fa-heart-o {
-            color: #B8807F; }
+            color: #2A5DB0; }
           .content-wrapper .author-section .user-action-buttons .action-buttons li .fa-star-o {
             color: #DBCB52; }
           .content-wrapper .author-section .user-action-buttons .action-buttons li .fa-eye {
