--- a/css/profile.css
+++ b/css/profile.css
@@ -753,4 +753,10 @@ hr {
       .page-content .bottom .comments .comment .content {
         overflow: hidden; }
 
+#nav.affix {
+  position: relative;
+  -webkit-box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.15); }
+
 /*# sourceMappingURL=profile.css.map */
