--- a/css/index.scss
+++ b/css/index.scss
@@ -169,6 +169,9 @@ hr{
         font-size: 18px;
         display:block;
       }
+      a:hover{
+        color: $color-main-hover;
+      }
     }
   }
   .panel-body{
@@ -231,9 +234,7 @@ hr{
           display: inline-block;
           margin: 0 5px;
         }
-        .param:hover{
-          color: $color-active !important;
-        }
+        
         a{
           text-decoration: none;
         }
