--- a/css/project.css
+++ b/css/project.css
@@ -148,7 +148,10 @@ footer {
   margin-left: 10px; }
 
 .list-inline li {
-  font-weight: 300; }
+  font-weight: 300;
+  color: white !important; }
+  .list-inline li a {
+    color: white !important; }
 
 .social_list a {
   text-decoration: none !important; }
@@ -407,6 +410,9 @@ input.xs-input {
   border: 1px solid #DDD;
   color: #666;
   margin: 0; }
+
+.checkbox_header {
+  display: inline-block; }
 
 .user_login input[type="checkbox"] {
   float: left;
