--- a/css/profile.css
+++ b/css/profile.css
@@ -702,21 +702,30 @@ hr {
   width: 100%;
   display: inline-block; }
   .page-content .top .content .left {
-    float: left; }
-    .page-content .top .content .left .avatar-container .profile-avatar {
-      display: block;
-      margin: 0 auto;
-      max-width: 100%;
-      max-height: 300px; }
-    .page-content .top .content .left .avatar-container .edit-buttons {
-      list-style: none;
-      text-align: center;
-      position: relative;
-      bottom: 30px;
-      margin: 0; }
-      .page-content .top .content .left .avatar-container .edit-buttons li {
-        display: inline;
-        margin-left: 15px; }
+    float: left;
+    text-align: center; }
+    .page-content .top .content .left .avatar-container {
+      display: inline-block; }
+      .page-content .top .content .left .avatar-container .profile-avatar {
+        display: block;
+        margin: 0 auto;
+        max-width: 100%;
+        max-height: 300px; }
+      .page-content .top .content .left .avatar-container .edit-buttons {
+        list-style: none;
+        text-align: center;
+        position: relative;
+        bottom: 32px;
+        margin: 0;
+        background: rgba(0, 0, 0, 0.7);
+        padding: 5px; }
+        .page-content .top .content .left .avatar-container .edit-buttons li {
+          display: inline;
+          margin-left: 15px; }
+          .page-content .top .content .left .avatar-container .edit-buttons li a {
+            color: white; }
+          .page-content .top .content .left .avatar-container .edit-buttons li a:hover {
+            color: white; }
     .page-content .top .content .left .full-name {
       text-align: center;
       font-size: 24px; }
