--- a/css/common.css
+++ b/css/common.css
@@ -366,11 +366,11 @@ input.xs-input {
   font-size: 16px;
   text-align: center; }
 .social_login .fb .icon {
-  background: #3B5998; }
+  background: #3b5998; }
 .social_login .google .icon {
-  background: #DD4B39; }
+  background: #dd4b39; }
 .social_login .linkedIn .icon {
-  background: #3E5065; }
+  background: #0077b5; }
 .social_login .icon_title {
   display: block;
   padding: 10px 0;
