--- a/css/common.scss
+++ b/css/common.scss
@@ -13,6 +13,11 @@ $color-main-hover: #3F3F3F;
 $color-unactive: #827878;
 $color-navbar: #34495E;
 $color-smoothe: #5f5f5f;
+$color-fb: #3b5998;
+$color-github: #333333;
+$color-google: #dd4b39;
+$color-twitter: #55acee;
+$color-linkedIn: #0077b5;
 
 html, body{
   font-family: $font-lato !important;
@@ -477,13 +482,13 @@ input.xs-input{
       text-align:  center;
     }
     .fb .icon  {
-      background: #3B5998;
+      background: $color-fb;
     }
     .google .icon  {
-        background: #DD4B39;
+        background: $color-google;
     }
     .linkedIn .icon  {
-        background: #3E5065;
+        background: $color-linkedIn;
     }
     .icon_title  {
         display: block;
