--- a/css/common.scss
+++ b/css/common.scss
@@ -268,13 +268,13 @@ p, li {
     line-height: 2px; }
 
 .social-icon.fb {
-  background: #3B5998; }
+  background: $color-fb; }
 
 .social-icon.google {
-  background: #DD4B39; }
+  background: $color-google; }
 
 .social-icon.linkedIn {
-  background: #3E5065; }
+  background: $color-linkedIn; }
 
 .footer-row {
   margin: 0; }
