--- a/css/index.css
+++ b/css/index.css
@@ -192,13 +192,13 @@ p, li {
   line-height: 2px; }
 
 .social-icon.fb {
-  background: #3B5998; }
+  background: #3b5998; }
 
 .social-icon.google {
-  background: #DD4B39; }
+  background: #dd4b39; }
 
 .social-icon.linkedIn {
-  background: #3E5065; }
+  background: #0077b5; }
 
 .footer-row {
   margin: 0; }
