--- a/css/profile.scss
+++ b/css/profile.scss
@@ -35,6 +35,7 @@ $color-add: #00b488;
       .left{
         float:left;
         text-align:center;
+        margin-bottom: 20px;
         .avatar-container{
           display:inline-block;
           .profile-avatar{
@@ -92,15 +93,39 @@ $color-add: #00b488;
           }
         }
       }
+      .mid{
+        padding-left:30px;
+        .block{
+
+          h4{
+            margin-top: 0;
+          }
+          .info{
+            .key{
+              p{
+                text-align:right;
+              }
+            }
+            .value{
+              p{
+
+              }
+            }
+          }
+          .interests, .skills{
+            list-style:none;
+            li{
+              display:inline-block;
+              margin-right: 10px;
+
+            }
+          }
+        }
+      }
       .right{
         float:right;
-        padding-left:30px;
       }
     }
-  }
-
-  .middle{
-
   }
 
   .bottom{
@@ -132,11 +157,17 @@ $color-add: #00b488;
   }
 }
 
-
-
 #nav.affix{
   position:relative;
   -webkit-box-shadow: 0px 3px 5px 2px rgba(0,0,0,0.15);
   -moz-box-shadow: 0px 3px 5px 2px rgba(0,0,0,0.15);
   box-shadow: 0px 3px 5px 2px rgba(0,0,0,0.15);
+}
+
+.hashtag-params{
+  list-style: none;
+}
+
+.clear{
+  clear:both;
 }
