--- a/css/about.css
+++ b/css/about.css
@@ -35,6 +35,26 @@ a {
 a:hover {
   color: #2200CC; }
 
+.underlined {
+  position: relative;
+  color: #5f5f5f; }
+
+.underlined:after {
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background-color: #5f5f5f;
+  content: "";
+  transition: width 0.3s; }
+
+.underlined:hover {
+  color: #5f5f5f; }
+
+.underlined:hover:after {
+  width: 100%; }
+
 .navbar-default {
   text-align: center;
   background: transparent;
