--- a/css/index.scss
+++ b/css/index.scss
@@ -187,12 +187,15 @@ hr{
         text-align:center;
         img{
           max-width: 100%;
-          -webkit-filter: opacity(.8);
-          filter: opacity(.8);
+          opacity: .6;
+          transition: opacity .5s ease-out;
+          -moz-transition: opacity .5s ease-out;
+          -webkit-transition: opacity .5s ease-out;
+          -o-transition: opacity .5s ease-out;
+
         }
         img:hover{
-          -webkit-filter: opacity(1);
-          filter: opacity(1);
+          opacity:1;
         }
       }
     }
@@ -216,10 +219,12 @@ hr{
               background-color: transparent;
               color: $color-smoothe;
               border-radius: 30px;
+              transition: background .6s;
             }
+
             span:hover{
-                background-color: $color-panel;
-                color: white;
+              color: white;
+              background-color: $color-panel;
             }
           }
         }
@@ -278,6 +283,7 @@ hr{
   .badge{
     border-radius: 0;
   }
+  transition: background .5s;
 }
 
 .list-group-item:hover{
