--- a/css/search.css
+++ b/css/search.css
@@ -35,6 +35,26 @@ a {
 a:hover {
   color: #2200CC; }
 
+.underlined {
+  position: relative;
+  color: #5f5f5f; }
+
+.underlined:after {
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background-color: #5f5f5f;
+  content: "";
+  transition: width 0.3s; }
+
+.underlined:hover {
+  color: #5f5f5f; }
+
+.underlined:hover:after {
+  width: 100%; }
+
 .navbar-default {
   text-align: center;
   background: transparent;
@@ -620,11 +640,13 @@ hr {
         text-align: center; }
         .panel .panel-body .image-container a img {
           max-width: 100%;
-          -webkit-filter: opacity(0.8);
-          filter: opacity(0.8); }
+          opacity: .6;
+          transition: opacity .5s ease-out;
+          -moz-transition: opacity .5s ease-out;
+          -webkit-transition: opacity .5s ease-out;
+          -o-transition: opacity .5s ease-out; }
         .panel .panel-body .image-container a img:hover {
-          -webkit-filter: opacity(1);
-          filter: opacity(1); }
+          opacity: 1; }
     .panel .panel-body .info-container p {
       margin: 0px 5px 10px 5px;
       font-family: "Lato", sans-serif; }
@@ -640,10 +662,11 @@ hr {
           border: 1px solid #6895A0;
           background-color: transparent;
           color: #5f5f5f;
-          border-radius: 30px; }
+          border-radius: 30px;
+          transition: background .6s; }
         .panel .panel-body .info-container .project_hashtags .hashtag a span:hover {
-          background-color: #4db6ac;
-          color: white; }
+          color: white;
+          background-color: #4db6ac; }
     .panel .panel-body .info-container .project-params, .panel .panel-body .info-container .hashtag-params {
       text-align: center;
       list-style-type: none;
@@ -678,7 +701,8 @@ hr {
   margin: 3px auto;
   font-weight: 500;
   text-align: center;
-  display: inline-block; }
+  display: inline-block;
+  transition: background .5s; }
   .list-group-item .badge {
     border-radius: 0; }
 
@@ -706,7 +730,8 @@ hr {
 .content-wrapper {
   margin: 0 auto; }
   .content-wrapper .result-section {
-    margin-top: 40px; }
+    margin-top: 40px;
+    border-left: solid 2px rgba(200, 200, 200, 0.3); }
 
 .menu-top {
   width: 100%; }
@@ -716,7 +741,7 @@ hr {
 
 .menu {
   list-style-type: none;
-  margin-top: 105px; }
+  margin-top: 160px; }
   .menu .menu-item {
     font-family: "Raleway", sans-serif;
     font-weight: 300;
@@ -731,8 +756,8 @@ hr {
   .menu .menu-item-header {
     font-size: 30px;
     padding: 20px 5px; }
-  .menu .menu-item:hover {
-    background-color: #ECEAEA; }
+  .menu .menu-item-header:hover {
+    background-color: #F3F3F3; }
 
 .search-header {
   text-align: center;
@@ -786,6 +811,9 @@ hr {
 
 @media screen and (max-width: 767px) {
   .result-section {
-    margin-top: 0px; } }
+    margin-top: 0px; }
+
+  aside {
+    margin-top: 50px; } }
 
 /*# sourceMappingURL=search.css.map */
