--- a/css/profile.css
+++ b/css/profile.css
@@ -789,16 +789,27 @@ hr {
         .page-content .top .content .left .rating-container .rating-input i:hover {
           cursor: pointer; }
   .page-content .top .content .mid .block {
-    margin-bottom: 20px; }
+    margin-bottom: 30px; }
     .page-content .top .content .mid .block h4 {
       margin-top: 0; }
-    .page-content .top .content .mid .block .info .key p {
-      text-align: right; }
-    .page-content .top .content .mid .block .interests, .page-content .top .content .mid .block .skills {
-      list-style: none; }
-      .page-content .top .content .mid .block .interests li, .page-content .top .content .mid .block .skills li {
-        display: inline-block;
-        margin-right: 10px; }
+    .page-content .top .content .mid .block .wrapper {
+      display: inline-block; }
+      .page-content .top .content .mid .block .wrapper .info {
+        display: block;
+        width: 100%;
+        height: 30px;
+        margin: 0 auto; }
+        .page-content .top .content .mid .block .wrapper .info .key {
+          float: left;
+          width: 80px;
+          display: inline-block; }
+        .page-content .top .content .mid .block .wrapper .info .value {
+          float: left;
+          display: inline-block;
+          word-break: break-all; }
+    .page-content .top .content .mid .block .skills {
+      list-style: none;
+      text-align: center; }
   .page-content .top .content .right {
     float: right; }
     .page-content .top .content .right h4 {
