--- a/css/profile.scss
+++ b/css/profile.scss
@@ -50,16 +50,16 @@ $color-add: #00b488;
             position:relative;
             bottom: 32px;
             margin:0;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(255, 255, 255, 0.7);
             padding: 5px;
             li{
               display:inline;
               margin-left:15px;
               a{
-                color: white;
+                color: $color-main-hover;
               }
               a:hover{
-                color: white;
+                color: $color-main;
               }
             }
 
@@ -132,31 +132,54 @@ $color-add: #00b488;
         }
       }
     }
-  }
+    .showoff-section{
+      .block{
+        h4{
 
-  .bottom{
-    .comments{
-      display:inline-block;
-      .comment-form{
-        max-width: 650px;
-        margin: 0 auto;
-      }
-      .comment{
-        margin:0 auto;
-        display:inline-block;
-        .author-image{
-          display:inline-block;
-          float:left;
-          margin:0 15px;
-          .img-circle{
-            min-width:100px;
-            max-width:150px;
-            float:left;
-            display:inline-block;
-          }
         }
-        .content{
-          overflow:hidden;
+        .projects, .portfolio{
+          list-style:none;
+          li{
+            display:inline-block;
+            .project{
+              display:inline-block;
+              img{
+                max-width:300px;
+              }
+              .name{
+                position: relative;
+                bottom: 32px;
+                background: rgba(255, 255, 255, 0.7);
+                padding: 5px;
+              }
+            }
+
+            .portfolio-item{
+              display:inline-block;
+              max-width:300px;
+              background-color: white;
+              -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+              -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+              box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+              padding: 5px;
+              img{
+                max-width:300px;
+                position: relative;
+                left: -5px;
+                top: -5px;
+              }
+              .name{
+                position:relative;
+                font-size:20px;
+                bottom: 40px;
+                background: rgba(255, 255, 255, 0.7);
+              }
+              .aim, .role, .skills, .exp, .link{
+                font-size:14px;
+                text-align:both;
+              }
+            }
+          }
         }
       }
     }
@@ -179,6 +202,7 @@ $color-add: #00b488;
 }
 
 @media screen and (max-width: 767px) {
-  .left{
+  .block{
+      margin-bottom: 20px;
   }
 }
