--- a/css/index.scss
+++ b/css/index.scss
@@ -161,6 +161,9 @@ hr{
     border-radius: 0;
     text-align: center;
     width:100%;
+    position: absolute;
+    z-index: 40;
+    background-color: rgba(255, 255, 255, 0.6);
     .panel-title{
       a{
         font-family: $font-family-main;
@@ -258,6 +261,16 @@ hr{
         text-align:both;
       }
     }
+  }
+}
+
+.panel-hashtag{
+  .panel-heading{
+    border-radius: 0;
+    text-align: center;
+    width:100%;
+    position: static;
+    background-color: transparent;
   }
 }
 
